--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 input {
@@ -21,4 +23,40 @@ button {
   padding: 10px 40px;
   color: white;
 }
+.todoWrapper {
+  background-color: rgb(69, 78, 105);
+  padding: 40px 0;
+}
+.Todo-form {
+  margin-bottom: 50px;
+}
+
+.TodoComp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Todo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 280px;
+  background-color: rgb(157, 157, 169);
+  padding: 0 40px;
+  margin-bottom: 10px;
+}
+
+.FontAwesomeIcon {
+  color: white;                /* Icon color */
+  cursor: pointer;             /* Cursor pointer for interactive elements */
+  transition: color 0.3s;
+  margin-right: 1rem;      /* Smooth color transition */
+}
+
+.FontAwesomeIcon:hover {
+  color: #61dafb;              /* Change color on hover */
+}
+
 
