--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-  color: white;
+  background-color: rgb(69, 78, 105);
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
 }
 
 input {
@@ -22,9 +21,10 @@ button {
   border-radius: 5px;
   padding: 10px 40px;
   color: white;
+  cursor: pointer;
 }
 .todoWrapper {
-  background-color: rgb(69, 78, 105);
+  
   padding: 40px 0;
 }
 .Todo-form {
@@ -42,10 +42,13 @@ button {
   align-items: center;
   justify-content: space-between;
 
-  width: 280px;
+  width: 30%;
   background-color: rgb(157, 157, 169);
-  padding: 0 40px;
+  padding: 20px 40px;
   margin-bottom: 10px;
+  border-radius: 10px;
+  color: white;
+  font-weight: 700;
 }
 
 .FontAwesomeIcon {
@@ -56,7 +59,11 @@ button {
 }
 
 .FontAwesomeIcon:hover {
-  color: #61dafb;              /* Change color on hover */
+  color: #61dafb;           
+}
+.completed {
+  text-decoration: line-through;
+  text-decoration-color: rgb(77, 77, 77);
 }
 
 
